@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.artists.yoyo.pl"
        name="YoYo-MusicBrainz"
-        version="1.0.9"
+        version="1.1.0"
        provider-name="smuto">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
